--- a/characterize_CCD_student.ipynb
+++ b/characterize_CCD_student.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "answer goes here: I want to say that since the second image was processed, some of the noise has been removed from the image for it to be more comfortable to observe. Also teh raw image can contain the errors from the detector which can change the observation."
+    "answer goes here: The first plot shows the data from the observation when it was done at the moment. The second plot shows a plot when its processed after going through bias removal. Also after processing the darks and add or substarct them from the raw data. They look different because of all these processes that it had to go htourgh for it to be able to be observed."
    ]
   },
   {
@@ -274,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "answer goes here: Between image 1 and 2 the second image has a more precise image with more detailed data."
+    "<h5>answer goes here</h5>: From what we talked in calss I can say that the difference from the first one and the second one could be the dust grains. In the V-band graph the little donuts could be because dust grains or also it could be because they are out of focus."
    ]
   },
   {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "Text(0.5, 1.0, 'cutout of V-band image')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,18 +388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 1.0, 'Bias 1')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the standard deviation of this Bias frame is 12.986602696986422\n"
+     ]
     },
     {
      "data": {
@@ -416,15 +413,16 @@
     "#Put your code here\n",
     "#***********************\n",
     "plt.figure()\n",
-    "imdisplay(data_bias1[600:800, 1000:1200])\n",
-    "plt.title(\"Bias 1\")"
+    "imdisplay(data_bias1[600:800, 1000:1200])#here the image is extending for rows 600 to 800 which at the start, and the columns from 1000 to 1200\n",
+    "plt.title(\"Bias 1\")\n",
+    "print(\"the standard deviation of this Bias frame is\", np.std(data_bias1[600:800, 1000:1200]))#here I print the standard deviation of the Bias 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "put your answer here"
+    " <h5>put your answer here:</h5> The standard deviation that I found was approximately 12.99 which in comparison to the one that is above of ~42.1, we can determine that the propagation of data in the bias extending from row 600 to 800 in bteween the columns 1000 and 1200 is lower from the principal propagation, which can make me suspect that the propagation in other parts of the bias data is way higher for this number to be very different from our sample."
    ]
   },
   {
@@ -440,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Readnoise of Bias Frame in ADU is = 20.364156858218408\n"
+      "Readnoise of Bias Frame in ADU is = 10.182078429109202\n"
      ]
     }
    ],
@@ -462,9 +460,9 @@
     "\n",
     "#*******************\n",
     "#Your code here\n",
-    "data_sub = data_bias1 - data_bias2\n",
-    "stevdev = np.std(data_sub)\n",
-    "read_noise = stevdev * np.sqrt(2)\n",
+    "data_sub = data_bias1 - data_bias2#here we use substractions because we want to find the readnoise between these two bias frames\n",
+    "stevdev = np.std(data_sub)#here we find the standard deviation of our new data\n",
+    "read_noise = stevdev / np.sqrt(2)#here we use the equation that we saw in class which said that for two biased images the read noise was sigma multiplied by sqrt of 2\n",
     "\n",
     "print(\"Readnoise of Bias Frame in ADU is =\", read_noise)\n"
    ]
@@ -473,7 +471,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "put answer to part 2 and 3 here:"
+    "<h5>put answer to part 2 and 3 here</h5>: 2) To find the readnoise we need to substact one data from another and the result is going to give us the sample data to find the readnoise, and if we dont substract one data from another we are not going to find this important part of the measurment, if we would have just one bias frame it would not give us a readnoise value because is not comparing to another part of the data. \n",
+    "3) "
    ]
   },
   {
